--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- hero section -->
     <section id="hero">
       <div class="intro">
-        <h2>Hello👋 I'm</h2>
+        <h2>Hello I'm</h2>
         <h1>Engr. Cyril Nkwi</h1>
         <div class="profession"><p>Software Engineer</p></div>
       </div>
