--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/main_pic.jpeg"
+    />
   </head>
   <body>
     <!-- hero section -->
