Featured projects, experience sections and styling updates

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IAmNkwiCyril</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
@@ -14,7 +17,6 @@
       sizes="32x32"
       href="./assets/main_pic.jpeg"
     />
-
   </head>
   <body>
     <!-- Hero Section -->
@@ -72,19 +74,26 @@
               <div class="experience-card">
                 <div class="experience-header">
                   <div>
-                    <div class="experience-role">Frontend Developer</div>
-                    <div class="experience-company">Faculty of Engineering and Technology</div>
+                    <div class="experience-role">
+                      Software Engineering Intern
+                    </div>
+                    <div class="experience-company">
+                      <a href="https://techchantier.com">Tech Chantier</a>
+                    </div>
                   </div>
-                  <div class="experience-date">2021 - Present</div>
+                  <div class="experience-date">Mar 2024 - 2025</div>
                 </div>
                 <p class="experience-description">
-                  Building responsive web applications and user interfaces using modern web technologies. 
-                  Focus on creating clean, maintainable code and exceptional user experiences.
+                  Building responsive web applications and user interfaces using
+                  modern web technologies. Focus on creating clean, maintainable
+                  code and exceptional user experiences.
                 </p>
                 <div class="experience-skills">
-                  <span class="skill-tag">JavaScript</span>
                   <span class="skill-tag">HTML/CSS</span>
-                  <span class="skill-tag">Bootstrap</span>
+                  <span class="skill-tag">JavaScript</span>
+                  <span class="skill-tag">PHP/Laravel</span>
+                  <span class="skill-tag">Next.js</span>
+                  <span class="skill-tag">Supabase</span>
                   <span class="skill-tag">UI/UX Design</span>
                 </div>
               </div>
@@ -94,19 +103,71 @@
               <div class="experience-card">
                 <div class="experience-header">
                   <div>
-                    <div class="experience-role">Software Engineering Student</div>
-                    <div class="experience-company">University Projects</div>
+                    <div class="experience-role">
+                      Full Stack Developer
+                    </div>
+                    <div class="experience-company"><a href="https://yadiko.com">Yadiko (Remote)</a></div>
                   </div>
-                  <div class="experience-date">2021 - Present</div>
+                  <div class="experience-date">Nov 2024 - Feb 2025</div>
                 </div>
                 <p class="experience-description">
-                  Developing various projects ranging from portfolio websites to complex web applications. 
-                  Learning and implementing best practices in software development and design patterns.
+                  Developing various projects ranging from portfolio websites to
+                  complex web applications. Learning and implementing best
+                  practices in software development and design patterns.
                 </p>
                 <div class="experience-skills">
                   <span class="skill-tag">Full Stack Development</span>
-                  <span class="skill-tag">Problem Solving</span>
+                  <span class="skill-tag">Laravel</span>
                   <span class="skill-tag">Version Control</span>
+                  <span class="skill-tag">SSH</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="timeline-item">
+              <div class="experience-card">
+                <div class="experience-header">
+                  <div>
+                    <div class="experience-role">
+                      Full Stack Developer
+                    </div>
+                    <div class="experience-company"><a href="#">Njomi (Remote)</a></div>
+                  </div>
+                  <div class="experience-date">April 2025 - July 2025</div>
+                </div>
+                <p class="experience-description">
+                  Developing various projects ranging from portfolio websites to
+                  complex web applications. Learning and implementing best
+                  practices in software development and design patterns.
+                </p>
+                <div class="experience-skills">
+                  <span class="skill-tag">Full Stack</span>
+                  <span class="skill-tag">Laravel</span>
+                  <span class="skill-tag">React</span>
+                </div>
+              </div>
+            </div>
+            <div class="timeline-item">
+              <div class="experience-card">
+                <div class="experience-header">
+                  <div>
+                    <div class="experience-role">
+                      Full Stack Developer
+                    </div>
+                    <div class="experience-company"><a href="https://toukobanix.org/">Touko Banix (Hybrid)</a></div>
+                  </div>
+                  <div class="experience-date">June 2025 - Present</div>
+                </div>
+                <p class="experience-description">
+                  Developing various projects ranging from portfolio websites to
+                  complex web applications. Learning and implementing best
+                  practices in software development and design patterns.
+                </p>
+                <div class="experience-skills">
+                  <span class="skill-tag">Full Stack</span>
+                  <span class="skill-tag">React</span>
+                  <span class="skill-tag">Next.js</span>
+                  <span class="skill-tag">Supabase</span>
                 </div>
               </div>
             </div>
@@ -119,14 +180,15 @@
     <section id="projects">
       <div class="projects-container">
         <h2 class="section-title">Featured Projects</h2>
-        
+
         <div class="pro-card">
           <div class="pro-about order">
-            <h1><a href="">Portfolio Website</a></h1>
+            <h1><a href="https://brillianandco.group/">Brillian and Co Real Estate</a></h1>
             <p>
-              Built entirely with HTML, CSS and Vanilla JavaScript, this portfolio
-              website is a showcase of my skills, projects and experience as a software engineer.
-              It features a clean and modern design, easy navigation, and responsive layout.
+              Built entirely with HTML, CSS and Vanilla JavaScript, this
+              portfolio website is a showcase of my skills, projects and
+              experience as a software engineer. It features a clean and modern
+              design, easy navigation, and responsive layout.
             </p>
           </div>
           <div class="pro-image">
@@ -139,11 +201,12 @@
             <img src="./assets/pro2.png" alt="Meeting agenda" />
           </div>
           <div class="pro-about">
-            <h1>Meeting Agenda</h1>
+            <h1>Cyrix Tech Solutions</h1>
             <p>
-              A collaborative meeting management application that helps teams organize and track 
-              their meetings efficiently. Features include agenda creation, task assignment, and 
-              real-time updates for seamless team coordination.
+              A collaborative meeting management application that helps teams
+              organize and track their meetings efficiently. Features include
+              agenda creation, task assignment, and real-time updates for
+              seamless team coordination.
             </p>
           </div>
         </div>
@@ -152,9 +215,9 @@
           <div class="pro-about order">
             <h1>TinDog</h1>
             <p>
-              A playful landing page design for a dog dating app, showcasing modern web design 
-              principles and responsive layouts. Built with Bootstrap and custom CSS for a polished, 
-              professional appearance.
+              A playful landing page design for a dog dating app, showcasing
+              modern web design principles and responsive layouts. Built with
+              Bootstrap and custom CSS for a polished, professional appearance.
             </p>
           </div>
           <div class="pro-image">
@@ -169,9 +232,10 @@
           <div class="pro-about">
             <h1>MoveIt</h1>
             <p>
-              A modern moving company website featuring smooth animations and interactive elements. 
-              Demonstrates proficiency in creating engaging user experiences with attention to detail 
-              in both design and functionality.
+              A modern moving company website featuring smooth animations and
+              interactive elements. Demonstrates proficiency in creating
+              engaging user experiences with attention to detail in both design
+              and functionality.
             </p>
           </div>
         </div>
@@ -180,9 +244,10 @@
           <div class="pro-about order">
             <h1>Mondrian Project</h1>
             <p>
-              An artistic interpretation of Piet Mondrian's iconic style using CSS Grid. This project 
-              showcases advanced CSS layout techniques and demonstrates the power of modern web 
-              technologies in recreating classic art.
+              An artistic interpretation of Piet Mondrian's iconic style using
+              CSS Grid. This project showcases advanced CSS layout techniques
+              and demonstrates the power of modern web technologies in
+              recreating classic art.
             </p>
           </div>
           <div class="pro-image">
@@ -197,9 +262,10 @@
           <div class="pro-about">
             <h1>Pricing Table</h1>
             <p>
-              A responsive pricing component design perfect for SaaS applications. Features clean 
-              typography, strategic use of whitespace, and compelling call-to-action buttons that 
-              drive user engagement and conversions.
+              A responsive pricing component design perfect for SaaS
+              applications. Features clean typography, strategic use of
+              whitespace, and compelling call-to-action buttons that drive user
+              engagement and conversions.
             </p>
           </div>
         </div>
@@ -208,9 +274,10 @@
           <div class="pro-about order">
             <h1>Nexus</h1>
             <p>
-              A sleek and modern business website template featuring contemporary design trends. 
-              Includes smooth scrolling, parallax effects, and optimized performance for an 
-              exceptional user experience across all devices.
+              A sleek and modern business website template featuring
+              contemporary design trends. Includes smooth scrolling, parallax
+              effects, and optimized performance for an exceptional user
+              experience across all devices.
             </p>
           </div>
           <div class="pro-image">
@@ -224,9 +291,7 @@
     <section id="skill">
       <div class="skill-container">
         <div class="skill">
-          <h3 class="section-title">
-            Technologies & Tools I Use
-          </h3>
+          <h3 class="section-title">Technologies & Tools I Use</h3>
           <div class="techs">
             <div class="tech">React</div>
             <div class="tech">Next.js</div>
@@ -258,7 +323,12 @@
             <a href="mailto:akinimbomnkwi@gmail.com">Gmail</a>
           </div>
         </div>
-        <div class="back-to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">↑</div>
+        <div
+          class="back-to-top"
+          onclick="window.scrollTo({top: 0, behavior: 'smooth'})"
+        >
+          ↑
+        </div>
       </div>
     </footer>
   </body>
