Update favicon link and styling for better display

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="icon"
-      type="image/png"
-      sizes="32x32"
+      type="image/x-icon"
       href="./assets/main_pic.jpeg"
+      class="favicon"
     />
   </head>
   <body>
