Add Postman to skills section

--- a/index.html
+++ b/index.html
@@ -328,6 +328,7 @@
             <div class="tech">JavaScript</div>
             <div class="tech">Python</div>
             <div class="tech">Git/Github</div>
+            <div class="tech">Postman</div>
             <div class="tech">AWS - S3, EC2</div>
             <div class="tech">Figma</div>
             <div class="tech">Notion</div>
